RESOLVED FIXED294836
SWServer is being registered a client with a potentially wrong origin in case of load transfer
https://bugs.webkit.org/show_bug.cgi?id=294836
Summary SWServer is being registered a client with a potentially wrong origin in case...
youenn fablet
Reported 2025-06-23 06:07:42 PDT
SWServer is being registered a client with a potentially wrong origin in case of load transfer
Attachments
youenn fablet
Comment 1 2025-06-23 06:08:12 PDT
youenn fablet
Comment 2 2025-06-23 07:28:23 PDT
EWS
Comment 3 2025-06-23 22:56:33 PDT
Committed 296552@main (687b1d8c28ed): <https://commits.webkit.org/296552@main> Reviewed commits have been landed. Closing PR #47060 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.